tests/invalid/command_requires_export.wio
@Command("counter.get")
fn GetCounter() -> i32 {
    return 42;
}
